# python-geoarrow

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/geoarrow/: __init__.py  coords.py  extension_types.py  io.py
tests/: test_geoarrow.py
